--- a/index.html
+++ b/index.html
@@ -13,13 +13,34 @@
     <h4>this is a heading 4</h4>
     <h5>this is a heading 5</h5>
     <h6>this is a heading 6</h6>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis officiis laborum dolorem reprehenderit. Maiores
+    <br>
+    <!--Herr w ehave created paragraphs-->
+    <p><strong>Lorem ipsum dolor sit</strong>, amet consectetur adipisicing elit. Quis officiis laborum dolorem reprehenderit. Maiores
         eligendi tenetur consequuntur natus, possimus ipsam. Non consectetur ex sequi temporibus provident. Adipisci
         suscipit voluptas debitis voluptates, ducimus maiores dolores facere recusandae labore a doloremque aliquid
-        nobis ullam! Ea dolorem necessitatibus aut ipsum distinctio ipsa explicabo. Esse error quidem repudiandae minima
+        nobis ullam! Ea dolorem necessitatibus aut<br> ipsum distinctio ipsa explicabo. Esse error quidem repudiandae minima
         sint recusandae accusantium molestias consectetur eligendi! Laudantium, sed aliquid quam fugit, quo ut assumenda
         a eos doloremque delectus officiis eaque natus earum. Mollitia nesciunt repellat deleniti architecto sequi
         cupiditate quia accusamus facere laudantium voluptatibus? Rerum quasi nisi sequi, sapiente eius qui voluptas
-        dolorem recusandae numquam?</p>
+        <mark>Lorem ipsum dolor sit amet.</mark>dolorem recusandae numquam?</p>
+        <hr>
+        <p><b>this is a heading 5</b></p>
+        <em>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, magni.</em>
+
+        <p><i>Lorem ipsum dolor sit amet.</i></p>
+
+        <p><small>Lorem ipsum dolor sit amet.</small></p>
+        <abbr title="hypertext markup language">HTML</abbr>
+
+        <hr>
+        <address>Rr. Pashko Vasa, 1000</address>
+        <blockquote>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, facilis.<cite> -Lorem ipsum dolor sit amet.</cite></blockquote>
+
+        <p><q>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, fugit!</q></p>
+
+        
+
+
+       
 </body>
 </html>
