--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Lesson 2</title>
 </head>
 <body>
-    <h1>This is a heading 1</h1>
-    <h2>first branch testing</h2>
+
+    <video width="100%"  autoplay loop muted>
+        <source src="prishtina.mp4" type="video/mp4">
+ 
+        Your browser does not support the video tag.
+      
+    </video>
+ 
 </body>
 </html>
